# Eir

./: .gitignore  Eir.spec  LICENSE  README.md  build.py  eir.py  eir_standalone.spec  eir_windows.spec  package_mac.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
core/: __init__.py  ai_integration.py  config.py  constants.py  document_manager.py  file_io.py  logging_config.py  models.py  validation.py
tests/: __init__.py  run_tests.py  test_ai_integration.py  test_config.py  test_constants.py  test_document_management.py  test_file_io.py  test_logging_config.py  test_models.py  test_performance.py  test_ui_integration.py  test_validation.py
ui/: __init__.py  control_structure_tab.py  description_tab.py  document_widget.py  help_system.py  losses_hazards_tab.py  main_window.py  shared_components.py  uca_analysis_tab.py
