[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "eir"
version = "0.4.6"
description = "Eir - Systems-Theoretic Process Analysis Tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pontus Svenson", email = "pontus.svenson@ri.se"}
]
keywords = ["stpa", "safety", "analysis", "systems", "engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5.0",
    "networkx>=2.8",
    "requests>=2.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "pyinstaller>=5.0"
]

[project.urls]
Homepage = "https://github.com/pontussvenson/eir"
Repository = "https://github.com/pontussvenson/eir"
Documentation = "https://github.com/pontussvenson/eir#readme"
"Bug Tracker" = "https://github.com/pontussvenson/eir/issues"

[project.scripts]
eir = "eir:main"

[tool.setuptools.packages.find]
include = ["core*", "ui*", "tests*"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"